Add explain to AnalyticsExecutionEngine (#5442)
Signed-off-by: Finn Carroll <carrofin@amazon.com>